# 42_Malloc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: chunk.h  chunk_dll.h  malloc.h
include/chunk/: chunk_dll.h  chunk_search.h  chunk_utils.h
include/memory/: chunk_header.h  malloc_data.h  memory_utils.h  memory_zone.h  page_header.h
include/utils/: libft.h
src/: CMakeLists.txt  calloc.c  free.c  malloc.c  print.c  printf.c  realloc.c  reallocarray.c
src/chunk/: chunk_dll.c  chunk_search.c  chunk_utils.c
src/memory/: memory_utils.c  memory_zone.c  page_header.c
src/utils/: isprint.c  memcpy.c  memset.c  min.c  printf.c
tests/: CMakeLists.txt  main.c
tests/integration/: CMakeLists.txt  main.c
tests/unit/: CMakeLists.txt  main.c  test_chunk_dll.c
tests/unit/chunk/: test_chunk.c  test_chunk.h  test_chunk_coalesce.c  test_chunk_dll_insert.c  test_chunk_dll_insert_sorted.c  test_chunk_dll_remove.c  test_chunk_dll_transfer_sorted.c  test_chunk_split.c  test_is_adjacent_chunk.c
